--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Test output
-      run: true
+    - name: Setup Docker-compose
+      run: docker-compose up -d
   
