--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,5 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Setup Docker-compose
-      run: docker-compose up -d
+      run: docker compose up -d
+    - name: Run Test
+      run: docker exec backend sh -c "pytest ."
   
