--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,11 @@ services:
   backend:
     container_name: backend
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: gunicorn testcase.wsgi --bind 0.0.0.0:8000
     volumes:
       - .:/app
-    ports:
-      - "8000:8000"
+    expose:
+      - "8000"
     environment:
       - SECRET_KEY=django-insecure-pve6r^ahfrb31^(awrzcmo)12r38a94^nw6nye#mh9h@u2b8z2
       - DEBUG=True
@@ -26,6 +26,17 @@ services:
     volumes:
       - .:/app
     command: celery -A testcase worker --loglevel=info
+    depends_on:
+      - redis
+      - backend
+  nginx:
+    image: nginx
+    container_name: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./default.conf:/etc/nginx/conf.d/default.conf
+    restart: always
     depends_on:
       - redis
       - backend
